assets/css/styles.css
/* ... */
.projects__subtitle {
  font-size: var(--smaller-font-size);
  color: var(--first-color);
}

.projects__title {
  font-size: var(--h3-font-size);
  color: white;
  margin-block: .25rem .75rem;
}

.projects__button {
  font-size: var(--small-font-size);
  color: var(--white-color);
  display: flex;
  align-items: center;
  column-gap: .25rem;
}

.projects__button i {
  font-size: 1rem;
  transition: transform .4s;
}

.projects__button:hover i {
  transform: translateX(4px);
}

.projects__card:hover .projects__img {
  transform: scale(1.1);
}

.projects__card:hover .projects__modal {
  opacity: 1;
}


/*=============== CONTACT ===============*/
.contact__container {
  padding-bottom: 2rem;
}

.contact__form {
  row-gap: 1rem;
}

.contact__group {
  grid-template-columns: 1fr;
  row-gap: 1rem;
}

.contact__input {
  padding: 1rem 1.25rem;
  background-color: var(--container-color);
  color: var(--black-color);
  border: none;
  font-family: var(--body-font);
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
}

.contact__input::placeholder {
  color: var(--text-color);
}

.contact__area {
  height: 10rem;
  resize: none;
}

.contact__button {
  cursor: pointer;
  border: none;
  justify-self: center;
}

/*=============== FOOTER ===============*/
.footer {
  background-color: var(--black-color-light);
  padding-block: 4rem 2rem;
  text-align: center;
}

.footer__container {
  row-gap: 3rem;
}

.footer__title {
  font-size: var(--h1-font-size);
  color: var(--white-color);
  margin-bottom: .25rem;
}

.footer__description {
  font-size: var(--small-font-size);
}

.footer__links {
  display: flex;
  justify-content: center;
  column-gap: 2rem;
}

.footer__link {
  color: var(--white-color);
  transition: color .4s;
}

.footer__link:hover {
  color: var(--first-color);
}

.footer__socials {
  display: flex;
  justify-content: center;
  column-gap: 1.25rem;
}

.footer__social-link {
  font-size: 1.25rem;
  color: var(--white-color);
  transition: color .4s, transform .4s;
}

.footer__social-link img {
  width: 1.25rem;
  height: 1.25rem;
  display: inline-block;
  vertical-align: middle;
  background-color: #ffffff;
  padding: 0.35rem;
  border-radius: 0.5rem;
}

.footer__social-link:hover {
  color: var(--first-color);
  transform: translateY(-4px);
}

.footer__copy {
  display: block;
  margin-top: 5rem;
  font-size: var(--smaller-font-size);
  color: var(--text-color);
}

/*=============== SCROLL BAR ===============*/
::-webkit-scrollbar {
  width: .6rem;
  background-color: hsl(0, 0%, 85%);
}

::-webkit-scrollbar-thumb {
  background-color: hsl(0, 0%, 65%);
}

::-webkit-scrollbar-thumb:hover {
  background-color: hsl(0, 0%, 55%);
}

/*=============== SCROLL UP ===============*/
.scrollup {
  position: fixed;
  right: 1rem;
  bottom: -50%;
  background-color: var(--black-color);
  display: inline-flex;
  padding: .35rem;
  color: var(--white-color);
  font-size: 1.25rem;
  z-index: var(--z-tooltip);
  transition: bottom .4s, transform .4s, background-color .4s;
}

.scrollup:hover {
  background-color: var(--first-color);
  transform: translateY(-4px);
}

/* Show Scroll Up script trigger */
.show-scroll {
  bottom: 3rem;
}

/*=============== BREAKPOINTS ===============*/
/* For small devices */
@media screen and (max-width: 340px) {
  .container {
    margin-inline: 1rem;
  }
  
  .about__info {
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
  }
}

/* For medium devices */
@media screen and (min-width: 576px) {
  .home__container,
  .about__container,
  .resume__container {
    grid-template-columns: 360px;
    justify-content: center;
  }

  .contact__form {
    width: 450px;
    justify-self: center;
  }
  
  .projects__container {
    grid-template-columns: repeat(2, 280px);
  }
}

@media screen and (min-width: 768px) {
  .contact__group {
    grid-template-columns: repeat(2, 1fr);
  }
  
  .footer__container {
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
  }
  .footer__copy {
    margin-top: 4rem;
  }
}

/* For large devices (Desktop layouts) */
@media screen and (min-width: 1150px) {
  .container {
    margin-inline: auto;
  }

  .section {
    padding-block: 7rem 2rem;
  }

  .nav {
    height: calc(var(--header-height) + 2rem);
  }
  .nav__toggle,
  .nav__close {
    display: none;
  }
  .nav__list {
    flex-direction: row;
    column-gap: 3.5rem;
  }

  .home__container {
    grid-template-columns: auto 1fr;
    align-items: center;
    padding-block: 3rem;
  }
  .home__images {
    order: 1;
    justify-self: start;
  }
  .home__data {
    order: 2;
    text-align: left;
  }
  .home__social {
    justify-content: initial;
  }
  .home__circle {
    width: 300px;
    height: 300px;
  }
  .home__img {
    width: 430px;
    left: 0;
    right: auto;
    margin: 0;
  }

  .about__container {
    grid-template-columns: repeat(2, 480px);
    align-items: center;
    justify-content: center;
  }
  .about__data {
    text-align: initial;
    order: 1;
  }
  .about__info {
    margin-bottom: 4rem;
  }
  .about__circle {
    width: 480px;
    height: 480px;
  }
  .about__img {
    width: 410px;
  }

  .projects__container {
    grid-template-columns: repeat(3, 340px);
    gap: 2rem;
  }

  .contact__form {
    width: 680px;
  }

  .scrollup {
    right: 3rem;
  }
}

